# speedway_stats-scrapping

./: .gitignore  .pre-commit-config.yaml  Dockerfile  manage.py  pyproject.toml  redeploy.sh  requirements.txt  run_shell.sh  setup.cfg  tox.ini
api/: app.py  config.py  logging_config.py  ma_schemas.py  requirements.txt  resources.py  service.py
api/util/: json_util.py  marshmallow_tools.py
speedway_data_parser/: .SpeedwayEkstraligaParser.py.swn  .util.py.swn  __init__.py  global_consts.py  interpreters.py  speedway_ekstraliga_parser.py  string_tools.py  types.py  util.py
speedway_data_parser/parsers/: __init__.py  speedway_ekstraliga_parser.py
tests/: .test_util.py.swn  test_speedway_ekstraliga_parser.py  test_string_tools.py  test_util.py
tests/api/util/: test_marshmallow_tools.py
tests/dane_testowe/: speedway_ekstraliga_match.html  speedway_ekstraliga_match_new.html  speedway_ekstraliga_match_stopped.html  speedway_ekstraliga_match_with_lacks.html
tests/parsers/: test_speedway_ekstraliga_parser.py
